arrumei estava bagunçado

--- a/index.html/index.html
+++ b/index.html/index.html
@@ -28,14 +28,28 @@
   </select>
   </div>
 
-
-
-
- 
-
-
-
  </header>
+
+ <main>
+
+  <section class="container">
+
+
+    <img src="#" alt="#">
+    <div>
+      <p class="nome-produto"></p>
+      <p class="descricao-produto"></p>
+      <p class="sobre-produto"> </p>
+    </div>
+
+
+  </section>
+
+
+
+
+
+ </main>
 
 
   
