--- a/index.html/index.html
+++ b/index.html/index.html
@@ -34,8 +34,7 @@
 
   <section class="container">
 
-
-    <img src="#" alt="#">
+    <img src="" alt="imagem de um eletronico">
     <div>
       <p class="nome-produto"></p>
       <p class="descricao-produto"></p>
