--- a/index.html/index.html
+++ b/index.html/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>pratica</title>
+<link rel="stylesheet" href="./css/index.css">
 
-  <link rel="stylesheet" href="/index.html/index.css">
 </head>
 <body>
 
@@ -13,36 +13,90 @@
 
 
   <div class="link"> 
-  <h1>site de vendas</h1>
+  <h1 class="SITE-NOME">site de vendas</h1>
   </div>
 
 
   <div class="pesquisa-opcao">
   <input type="text" placeholder="pesquisar">
   <label for="opcao"></label>
-  <select class="selecionar-opticao" name="opcao" id="opcao">
-  <option value="selecionar opicao">selecionar opção</option>
+  <select class="selecionar-opticao" name="opcao" 
+  id="opcao"> 
+  <option value="selecionar-opiçao">opiçao</option>
   <option value="opcao1">opcao1</option>
   <option value="opcao2">opcao2</option>
   <option value="opcao3">opcao3</option>
   </select>
+  
+ 
   </div>
 
  </header>
 
  <main>
 
+
+
   <section class="container">
 
-    <img src="" alt="imagem de um eletronico">
-    <div>
-      <p class="nome-produto"></p>
-      <p class="descricao-produto"></p>
-      <p class="sobre-produto"> </p>
+
+    <div class="conteudo"> 
+    <img class="img-site" src="./eletronicos.jpg" alt="imagem de um eletronico">
+
+
+    <div class="info-produto">
+      <h2 class="nome-produto">Nome do produto</h2>
+      <p class="descricao-produto">descricao</p>
+      <a class="sobre-produto" href="sobre o produto">sobre o produto</a>
+
     </div>
+   </div>
+
+   
+    <div class="conteudo"> 
+    <img class="img-site" src="./eletronicos.jpg" alt="imagem de um eletronico">
+
+
+    <div class="info-produto">
+      <h2 class="nome-produto">Nome do produto</h2>
+      <p class="descricao-produto">descricao</p>
+      <a class="sobre-produto" href="sobre o produto">sobre o produto</a>
+
+    </div>
+   </div>
+
+   
+    <div class="conteudo"> 
+    <img class="img-site" src="./eletronicos.jpg" alt="imagem de um eletronico">
+
+
+    <div class="info-produto">
+      <h2 class="nome-produto">Nome do produto</h2>
+      <p class="descricao-produto">descricao</p>
+      <a class="sobre-produto" href="sobre o produto">sobre o produto</a>
+
+    </div>
+   </div>
+
+   
+    <div class="conteudo"> 
+    <img class="img-site" src="./eletronicos.jpg" alt="imagem de um eletronico">
+
+
+    <div class="info-produto">
+      <h2 class="nome-produto">Nome do produto</h2>
+      <p class="descricao-produto">descricao</p>
+      <a class="sobre-produto" href="sobre o produto">sobre o produto</a>
+
+    </div>
+   </div>
+
+
 
 
   </section>
+
+  
 
 
 
