--- a/ecoomece/index.html
+++ b/ecoomece/index.html
@@ -14,7 +14,7 @@
 
 
  
-  <h1 class="SITE-NOME">Site de Vendas</h1>
+  <h1 class="SITE-NOME">Masaru Suplementos</h1>
   
 
 
@@ -24,9 +24,9 @@
   <select class="selecionar-opticao" name="opcao" 
   id="opcao"> 
    <option class="opcao" value="selecionar-opiço">selecionar opiçoes</option>
-  <option class="opcao" value="opcao">notebook</option>
-  <option class="opcao" value="opcao">celular</option>
-  <option class="opcao" value="opcao">tablete</option>
+  <option class="opcao" value="opcao">Creatina</option>
+  <option class="opcao" value="opcao">Whey</option>
+  <option class="opcao" value="opcao">Barra de proteina</option>
   </select>
   </div>
 
@@ -40,7 +40,7 @@
 
 
     <div class="conteudo"> 
-    <img class="img-site" src="./eletronicos.jpg" alt="imagem de um eletronico">
+    <img class="img-site" src="./whey.jpg" alt="imagem de um eletronico">
 
 
     <div class="info-produto">
@@ -55,7 +55,7 @@
    
    
     <div class="conteudo"> 
-    <img class="img-site" src="./eletronicos.jpg" alt="imagem de um eletronico">
+    <img class="img-site" src="./whey.jpg" alt="imagem de um eletronico">
 
 
     <div class="info-produto">
@@ -69,7 +69,7 @@
 
    
     <div class="conteudo"> 
-    <img class="img-site" src="./eletronicos.jpg" alt="imagem de um eletronico">
+    <img class="img-site" src="./whey.jpg" alt="imagem de um eletronico">
 
 
     <div class="info-produto">
@@ -80,11 +80,8 @@
       </p>
     </div>
    </div>
-
-
-   
-    <div class="conteudo"> 
-    <img class="img-site" src="./eletronicos.jpg" alt="imagem de um eletronico">
+   <div class="conteudo"> 
+    <img class="img-site" src="./whey.jpg" alt="imagem de um eletronico">
 
 
     <div class="info-produto">
@@ -95,25 +92,8 @@
       </p>
     </div>
    </div>
-
-
-   
-    <div class="conteudo"> 
-    <img class="img-site" src="./eletronicos.jpg" alt="imagem de um eletronico">
-
-
-    <div class="info-produto">
-      <h2 class="nome-produto">Nome do produto</h2>
-       <a class="#" href="sobre o produto">Compre o produto</a>
-      <p class="info-itens">
-      
-      </p>
-    </div>
-   </div>
-
-   
-    <div class="conteudo"> 
-    <img class="img-site" src="./eletronicos.jpg" alt="imagem de um eletronico">
+   <div class="conteudo"> 
+    <img class="img-site" src="./whey.jpg" alt="imagem de um eletronico">
 
 
     <div class="info-produto">
@@ -124,8 +104,42 @@
       </p>
     </div>
    </div>
-  
+   <div class="conteudo"> 
+    <img class="img-site" src="./whey.jpg" alt="imagem de um eletronico">
 
+
+    <div class="info-produto">
+      <h2 class="nome-produto">Nome do produto</h2>
+       <a class="#" href="sobre o produto">Compre o produto</a>
+      <p class="info-itens">
+        descriçao do produto
+      </p>
+    </div>
+   </div>
+   <div class="conteudo"> 
+    <img class="img-site" src="./whey.jpg" alt="imagem de um eletronico">
+
+
+    <div class="info-produto">
+      <h2 class="nome-produto">Nome do produto</h2>
+       <a class="#" href="sobre o produto">Compre o produto</a>
+      <p class="info-itens">
+        descriçao do produto
+      </p>
+    </div>
+   </div>
+   <div class="conteudo"> 
+    <img class="img-site" src="./whey.jpg" alt="imagem de um eletronico">
+
+
+    <div class="info-produto">
+      <h2 class="nome-produto">Nome do produto</h2>
+       <a class="#" href="sobre o produto">Compre o produto</a>
+      <p class="info-itens">
+        descriçao do produto
+      </p>
+    </div>
+   </div>
 
 
   </section>
